@@ -1,0 +1,6 @@
+LineContinuation
+================
+
+.. productionlist:: lineContinuation
+	A: B C D \
+	   E F G
